--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -7,17 +7,17 @@
 
         <div class="form-group mb-3">
           <label for="username" class="form-label">Username</label>
-          <input type="text" name="username" id="username" class="form-control" required>
+          <input type="text" name="username" id="username" class="form-control" autocomplete="current-username" required>
         </div>
 
         <div class="form-group mb-3">
           <label for="password" class="form-label">Password</label>
-          <input type="password" name="password" id="password" class="form-control" required>
+          <input type="password" name="password" id="password" class="form-control" autocomplete="current-password" required>
         </div>
 
         <div class="form-group mb-3">
           <label id="rememberme" class="form-check-label">
-              <input type="checkbox" name="rememberme" class="form-check-input">Remember me
+              <input type="checkbox" name="rememberme" class="form-check-input me-2">Remember me
           </label>
         </div>
 
@@ -27,7 +27,8 @@
           <div class="msg">{{ msg }}</div>
         </div>
 
-        <input type="submit" value="Login" class="btn btn-primary w-100">
+        <input type="submit" value="Login" class="btn btn-primary w-100 mt-3">
     </form>
 </div>
+<script src="{{ url_for('static', filename='js/script.js') }}"></script>
 {% endblock %}
