--- a/app/templates/dashboards/admin.html
+++ b/app/templates/dashboards/admin.html
@@ -2,140 +2,79 @@
 {% block title %}Admin{% endblock %}
 
 {% block content %}
+<header role="banner" id="header" class="header ng-scope header--up header--at-top">
+      <div class="header__content header__sides">
+          <div class="header__nav">
+              <nav class="header__nav" role="navigation">
+                  <div class="header__nav__list">
+                      <div class="header__nav-item-wrapper">
+                          <a href="/" class="header__nav-item header__nav-item--active" >
+                              <span class="header__nav-item__text">
+                                  PDF Editor
+                              </span>
+                          </a>
+                      </div>
+                  </div>
+              </nav>
+          </div>
 
-<aside class="responsive-width-100 responsive-hidden">
-    <h1>Admin Panel</h1>
-    <a href="{{ url_for('admin.admin') }}"{{ ' class=selected' if selected == 'dashboard' else '' }}>Dashboard</a>
-</aside>
+          <div class="header__sides__aside header__user">
+              <a role="button" class="button" href="/logout">
+                  Logout
+              </a>
+          </div>
+      </div>
+  </header>
 
-<main class="responsive-width-100">
-    <header>
-        <a class="responsive-toggle" href="#">
-            <i class="fas fa-bars"></i>
-        </a>
-        <div class="space-between"></div>
-    </header>
-
-    <div class="dashboard">
-        <div class="content-block stat">
-            <div>
-                <h3>New Accounts (&lt;1 day)</h3>
-                <p>{{ "{:,}".format(accounts|length) }}</p>
-            </div>
-            <i class="fas fa-user-plus"></i>
+<div class="sidebar">
+    <div class="sidebar__content">
+        <div class="sidebar__content-item sidebar-border">
+            <a href="/">Home</a>
         </div>
-
-        <div class="content-block stat">
-            <div>
-                <h3>Total Accounts</h3>
-
-            </div>
-            <i class="fas fa-users"></i>
+        <div class="sidebar__content-item">
+            <a href="#">Add Workers</a>
         </div>
-
-        <div class="content-block stat">
-            <div>
-                <h3>Active Accounts (&lt;30 days)</h3>
-
-            </div>
-            <i class="fas fa-user-clock"></i>
-        </div>
-
-        <div class="content-block stat">
-            <div>
-                <h3>Inactive Accounts (&gt;30 days)</h3>
-
-            </div>
-            <i class="fas fa-user-clock"></i>
-        </div>
-    </div>
-
-<h2>New Accounts <span>(&lt;1 day)</span></h2>
-
-<div class="content-block">
-    <div class="table">
-        <table>
-            <thead>
-                <tr>
-                    <td>#</td>
-                    <td>Username</td>
-                    <td class="responsive-hidden">Email</td>
-                    <td class="responsive-hidden">Activation Code</td>
-                    <td class="responsive-hidden">Role</td>
-                    <td class="responsive-hidden">Registered Date</td>
-                    <td class="responsive-hidden">Last Seen</td>
-                    <td>Actions</td>
-                </tr>
-            </thead>
-            <tbody>
-                {% if not accounts: %}
-                <tr>
-                    <td colspan="8" style="text-align:center;">There are no newly registered accounts</td>
-                </tr>
-                {% endif %}
-                {% for account in accounts: %}
-                <tr>
-                    <td>{{ account['id'] }}</td>
-                    <td>{{ account['username'] }}</td>
-                    <td class="responsive-hidden">{{ account['email'] }}</td>
-                    <td class="responsive-hidden">{{ account['activation_code'] if account['activation_code'] else '--' }}</td>
-                    <td class="responsive-hidden">{{ account['role'] }}</td>
-                    <td class="responsive-hidden">{{ account['registered'] }}</td>
-                    <td class="responsive-hidden" title="{{ account['last_seen'] }}">{{ time_elapsed_string(account['last_seen']) }}</td>
-                    <td>
-
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
     </div>
 </div>
 
-<br><br>
+<main class="content_content">
+    <div class="d-flex align-items-center">
+        <h3 class="me-4">Total Accounts</h3>
+        <p class="h2">{{ "{:,}".format(accounts_total) }}</p>
+    </div>
 
-<h2>Active Accounts <span>(&lt;1 day)</span></h2>
-
-<div class="content-block">
-    <div class="table">
-        <table>
+    <h2>Accounts</h2>
+    <div>
+        <table class="table">
             <thead>
                 <tr>
-                    <td>#</td>
-                    <td>Username</td>
-                    <td class="responsive-hidden">Email</td>
-                    <td class="responsive-hidden">Activation Code</td>
-                    <td class="responsive-hidden">Role</td>
-                    <td class="responsive-hidden">Registered Date</td>
-                    <td class="responsive-hidden">Last Seen</td>
-                    <td>Actions</td>
+                    <th scope="col">User id</th>
+                    <th scope="col">Username</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">Role</th>
+                    <th scope="col">Registered Date</th>
+                    <th scope="col">Last Seen</th>
                 </tr>
             </thead>
             <tbody>
                 {% if not active_accounts: %}
                 <tr>
-                    <td colspan="8" style="text-align:center;">There are no active accounts</td>
+                    <th scope="col" colspan="6" style="text-align:center;">There are no accounts</th>
                 </tr>
                 {% endif %}
                 {% for account in active_accounts: %}
                 <tr>
-                    <td>{{ account['id'] }}</td>
-                    <td>{{ account['username'] }}</td>
-                    <td class="responsive-hidden">{{ account['email'] }}</td>
-                    <td class="responsive-hidden">{{ account['activation_code'] if account['activation_code'] else '--' }}</td>
-                    <td class="responsive-hidden">{{ account['role'] }}</td>
-                    <td class="responsive-hidden">{{ account['registered'] }}</td>
-                    <td class="responsive-hidden" title="{{ account['last_seen'] }}">{{ time_elapsed_string(account['last_seen']) }}</td>
-                    <td>
-
-                    </td>
+                    <th>{{ account['id'] }}</th>
+                    <th>{{ account['username'] }}</th>
+                    <th>{{ account['email'] }}</th>
+                    <th>{{ account['role'] }}</th>
+                    <th>{{ account['registered'] }}</th>
+                    <th title="{{ account['last_seen'] }}">{{ time_elapsed_string(account['last_seen']) }}</th>
                 </tr>
                 {% endfor %}
             </tbody>
         </table>
     </div>
-</div>
-
 </main>
 <script src="{{ url_for('static', filename='js/admin.js') }}"></script>
 
