Created Employee route

--- a/app/templates/dashboards/employee.html
+++ b/app/templates/dashboards/employee.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Member{% endblock %}
+{% block title %}Employee{% endblock %}
 
 {% block content %}
 <header role="banner" id="header" class="header ng-scope header--up header--at-top">
@@ -32,7 +32,7 @@
             <a href="/">Home</a>
         </div>
         <div class="sidebar__content-item">
-            <a href="#">Create tasks</a>
+            <a href="#">View tasks</a>
         </div>
     </div>
 </div>
